--- a/Slides/present.tex
+++ b/Slides/present.tex
@@ -18,6 +18,7 @@
 \usepackage{color}
 
 \addtobeamertemplate{footline}{\hfill\insertframenumber/\inserttotalframenumber
+
 \hspace{10em}\\}
 
 \usepackage{listings}
@@ -30,7 +31,8 @@
 \defbeamertemplate*{footline}{shadow theme}
 {%
   \leavevmode%
-  \hbox{\begin{beamercolorbox}[wd=.5\paperwidth,ht=2.5ex,dp=1.125ex,leftskip=.3cm plus1fil,rightskip=.3cm]{author in head/foot}%
+  \hbox{
+    \begin{beamercolorbox}[wd=.5\paperwidth,ht=2.5ex,dp=1.125ex,leftskip=.3cm plus1fil,rightskip=.3cm]{author in head/foot}%
     \usebeamerfont{author in head/foot}\insertframenumber\,/\,\inserttotalframenumber\hfill\insertshortauthor
   \end{beamercolorbox}%
   \begin{beamercolorbox}[wd=.5\paperwidth,ht=2.5ex,dp=1.125ex,leftskip=.3cm,rightskip=.3cm plus1fil]{}%
@@ -39,8 +41,7 @@
   \vskip0pt%
 }
 
-
-
+\beamertemplatenavigationsymbolsempty
 
 
 \begin{document}
@@ -51,10 +52,14 @@
 
 
 
-\begin{frame}{Comparaison des deux mondes}
+\begin{frame}{Objectif}
 
-intro : interopérabilité : accès Java facile et implicite, gestion
-mémoire et exceptions, TODO
+Caractéristiques d'une interopérabilité efficace :
+\begin{itemize}
+\item accès à l'autre monde simple ou implicite
+\item bonne gestion mémoire et des exceptions
+\item gestion des caractéristiques de chaque monde
+\end{itemize}
 
 \end{frame}
 
@@ -76,7 +81,7 @@ L'interopérabilité se fait sur le modèle objet de chacun
   surcharge & \checkmark & $\times$ \\\hline
   héritage multiple & pour les interfaces & \checkmark\\
   \hline
-  packetages/modules & $\emptyset$ mod. paramétrés & \checkmark\\\hline
+  modules paramétrés & $\times$ & \checkmark\\\hline
 \end{tabular}
 
 \bigskip
@@ -89,14 +94,17 @@ $\Rightarrow$ Il faut réduire les possibilités d'un outil à l'intersection de
 
 
 \begin{frame}{O'Jacaré : schéma global }
+
 Pour un accès à des classes Java :
+
+O'Jacaré génère leurs classes encapsulantes à partir d'un fichier dans lequel sont décrites les classes qu'on veut manipuler.
 \medskip
 \begin{figure}[h]
   \centering
   \includegraphics[scale=0.6]{schemaOjacare.png}
   \caption{La génération de code d'O'Jacaré}
 \end{figure}
-Génération des classes encapsulantes
+
 \end{frame}
 
 
@@ -104,12 +112,13 @@ Génération des classes encapsulantes
 
 
 \begin{frame}{O'Jacaré : schéma global }
-La capsule générée permet à l'utilisateur de faire des appels transparents à des méthodes Java.
-
-Camljava gère la communication entre les deux mondes :
+\begin{itemize}
+\item La capsule générée permet à l'utilisateur de faire des appels transparents à des méthodes Java.
+\item Camljava gère la communication entre les deux mondes :
 \begin{itemize}
 \item Recherche des classes par nom et des méthodes par signature
 \item Conversion des types de base est assurée
+\end{itemize}
 \end{itemize}
 \begin{figure}[h]
   \centering
@@ -146,77 +155,107 @@ $\Rightarrow$ un seul runtime
 Pas de problème de gestion mémoire, de communications .
 \end{frame}
 
-\begin{frame}{OCaml-Java : module OCaml ``Java''}
-\begin{tabular}{|l|l|}
-  \hline
-  type Java & description et exemple \\
-  \hline
-  java\_constructor & signature d'un constructeur  \\
-  &  "java.lang.Object()" \\
-  \hline
-  java\_method & signature d'une méthode \\
-  & "java.lang.String.lastIndexOf(string):int"\\
-  \hline
-  java\_field\_get & signature d'un attribut\\
-  & "mypack.Point.x:int" \\
-  \hline
-  java\_field\_set & signature d'un attribut\\
-  & "mypack.Point.x:int" \\
-  \hline
-  java\_type & classe, interface ou type Array\\
-  & "java.lang.String"\\
-  \hline
-  java\_proxy & type d'une interface\\
-  & "java.lang.Comparable"\\ 
-  \hline
-\end{tabular}
-\end{frame}
+
 
 
 
 \begin{frame}{OCaml-Java : l'accès au monde Java}
-
 \begin{figure}[h]
   \centering
-  \includegraphics[scale=0.35]{methModuleJava.png}
+  \includegraphics[scale=0.33]{methModuleJava.png}
 \end{figure}
 
-Accès à l'API Java et à du code utilisateur grâce à ce module OCaml.
-
-
-
+Accès à l'API Java et à du code utilisateur grâce à ce module.
+\begin{figure}[h]
+  \centering
+  \includegraphics[scale=0.30]{exempleOCaml-Java.png}
+\end{figure}
 
 \end{frame}
 
 
 \begin{frame}{Fusion des deux approches}
 
-
+\begin{tabular}{|c|c|c|}
+  \hline
+   \emph{O'Jacaré+CamlJava} & \emph{OCaml-Java} & \emph{O'Jacaré+OCaml-Java}\\
+  \hline
+  appels transparents & via module Java & appels transparents\\\hline
+  2 runtime & 1 runtime & 1 runtime \\\hline
+  Pas d'allocation & & \\\hline
+  vérifications accès & vérifications accès & vérifications accès \\
+  dans la capsule & par le compilateur & par le compilateur\\
+  (avant accès Java) & (côté Java) & (côté Java) \\ \hline
+\end{tabular}
 
 \end{frame}
 
 
+\begin{frame}{Adaptation d'Ojacaré}
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[scale=0.30]{typesOCamlJava.png}
+  \caption{Les types dans OCamlJava}
+\end{figure}
+
+\end{frame}
+
+\begin{frame}{Comparaison de génération}
+\begin{figure}[h]
+  \centering
+  \includegraphics[scale=0.35]{exemple.png}
+  \caption{La génération du constructeur de Point}
+\end{figure}
+\end{frame}
 
 
-\begin{frame}{Bibliographie}
+\begin{frame}{Conclusion}
+
+Ce nouvel outil a apporté des nouvelles possibilités d'un côté,
+avec une simplicité d'utilisation :
+\begin{itemize}
+\item Accès simple à l'API Java
+\item Accès utilisateur transparent grâce aux classes encapsulantes
+\item 1 seul runtime -> Gestion mémoire simplifiée et sûre
+\item Code généré simplifié ($\sim$ 5 fois moins)
+\item 
+\end{itemize}
+
+\begin{tabular}{|l|c|}
+  \hline
+  \emph{caractéristiques} & \emph{O'Jacaré + OCaml-Java} \\
+  \hline
+  accès champs & selon la visibilité + via appels de méthode\\\hline
+  var./méth. statiques &  fonctions/décl. globales\\\hline
+  héritage$\equiv$sous-typage? & $\times$ \\\hline
+  surcharge & $\times$ \\\hline
+  héritage multiple & \checkmark\\
+  \hline
+\end{tabular}
+
+
+\end{frame}
+
+%% \begin{frame}{Bibliographie}
   
-  \begin{thebibliography}{9}
-  \bibitem{amato2013localizing}
-    Amato, Gianluca and Scozzari, Francesca,
-    \emph{Localizing widening and narrowing}.
-    Static Analysis, Springer.
-    pages 25--42,
-    2013.
+%%   \begin{thebibliography}{9}
+%%   \bibitem{amato2013localizing}
+%%     Amato, Gianluca and Scozzari, Francesca,
+%%     \emph{Localizing widening and narrowing}.
+%%     Static Analysis, Springer.
+%%     pages 25--42,
+%%     2013.
 
-  \bibitem{halbwachs2012decreasing}
-    Halbwachs, Nicolas and Henry, Julien,
-    \emph{When the decreasing sequence fails}.
-    Static Analysis, Springer.
-    pages 198--213,
-    2012.
-  \end{thebibliography}
+%%   \bibitem{halbwachs2012decreasing}
+%%     Halbwachs, Nicolas and Henry, Julien,
+%%     \emph{When the decreasing sequence fails}.
+%%     Static Analysis, Springer.
+%%     pages 198--213,
+%%     2012.
+%%   \end{thebibliography}
 
-\end{frame}
+%% \end{frame}
 
 \end{document}
 
